fix: remove bleeding GTK focus ring from DND slider

--- a/scss/integrated_center.scss
+++ b/scss/integrated_center.scss
@@ -65,7 +65,7 @@
 
 .dnd-box {
   all: unset;
-  padding: 0px 16px;
+  padding: 8px 0 0 16px;
 }
 
 .dnd-label {
